force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/Five9__Five9OmniChannelSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Omni-Channel synchronization settings</description>
    <label>Five9 Omni-Channel Settings</label>
</CustomObject>