force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/fields/Five9__Federated_Routing__c.field-meta.xml
<CustomField>
    <fullName>Five9__Federated_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Federated Routing</description>
    <inlineHelpText>When enabled, if the agent is on a call, the Five9 adapter state is modified to prevent a text interaction. If the agent is in a text interaction, the Five9 adapter state is modified to prevent a voice interaction.</inlineHelpText>
    <label>Enable Federated Routing</label>
    <type>Checkbox</type>
</CustomField>