force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/fields/Five9__Omni_Channel_Sync__c.field-meta.xml
<CustomField>
    <fullName>Five9__Omni_Channel_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable Omni-Channel Synchronization</description>
    <inlineHelpText>Enable/disable state synchronization between Five9 and Salesforce Omni-Channel.</inlineHelpText>
    <label>Enable Omni-Channel Synchronization</label>
    <type>Checkbox</type>
</CustomField>