force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/fields/Five9__On_Call_Presence_Status_Id__c.field-meta.xml
<CustomField>
    <fullName>Five9__On_Call_Presence_Status_Id__c</fullName>
    <inlineHelpText>State that is selected when an agent receives a call. Do not include any service channels that are associated with Live Chat or routed Salesforce objects (for example, a Case or Lead object) to prevent a text interaction.</inlineHelpText>
    <label>On Call Presence Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>