force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/fields/Five9__On_Presence_Work_Presence_Status_Id__c.field-meta.xml
<CustomField>
    <fullName>Five9__On_Presence_Work_Presence_Status_Id__c</fullName>
    <inlineHelpText>State that is selected when an agent accepts a Live Chat or a routed Salesforce object. Do not include any service channels that are mapped to Five9 channels to prevent a call.</inlineHelpText>
    <label>On Presence Work Presence Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>