force-app/main/default/objects/Five9__Five9OmniChannelSettings__c/fields/Five9__Show_Service_Channels__c.field-meta.xml
<CustomField>
    <fullName>Five9__Show_Service_Channels__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls what should be displayed in Ready For... dialog. When it&apos;s disabled the selected Online Presence Statuses are shown. Otherwise Service Channels associated with the selected statuses are shown.</inlineHelpText>
    <label>Show Service Channels</label>
    <type>Checkbox</type>
</CustomField>